# mcp-ke

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.hybrid  Dockerfile.rest  LICENSE  README.md  config.yaml  docker-compose.yml  fly.toml  hybrid_server.py  mcp_server.py  pyproject.toml  railway.json  render.yaml  requirements.txt  rest_wrapper.py  setup.py  test_agent_helper_tools.py  test_argument_unwrapping.py  test_mcp_schemas.py  test_path_utils.py
.github/workflows/: validate-pr.yml
agent_tools/: __init__.py  analyze_power_spectrum_multiagent.py  arxiv_agent.py  llm_helper.py  power_spectrum_agent.py
automation/: generate_requirements.py  update_readme.py  validate_config.py
codes/: __init__.py  analysis.py  cosmology_models.py  data.py  mcmc.py  viz.py
data/: 1707.00588.txt  1807.06209.txt  LyA.xlsx  literature_summary.json  references.bib  research_summary.json
documentation/: 01_RATIONALE.md  02_ARCHITECTURE.md  02a_TOOLS.md  03_CONTRIBUTING.md  04_CLIENT.md  05_DEPLOYMENT.md  06_CHATGPT_INTEGRATION.md  07_UNIFIED_DEPLOYMENT.md  CLIENT.md  DESIGN.md  flowchart.py
examples/: weather_mas.py
ke_mcp/: __init__.py
ke_mcp/src/: build_tool.py  config_loader.py  config_validator.py  invoke.py  param_validator.py  schema.py  server.py  tool_handler.py  validator.py
mcp_ke/: __init__.py
mcp_utils/: __init__.py  path_utils.py  session.py
notebooks/: demo_cosmology_mcmc.ipynb
notebooks/output/: mcmc_samples.csv
output/: literature_research.json  literature_review.json
tests/: __init__.py  test_agent_tools.py  test_domain_tools.py  test_full_pipeline.py  test_mcmc_tools.py  test_mcp_e2e.py  test_mcp_server.py  test_viz_tools.py
tools/: __init__.py  agent_helper_tools.py  analysis.py  class_analysis_tools.py  cosmology_models.py  cosmology_models_tool.py  data.py  load_observational_data_tool.py  mcmc_tools.py  session_tools.py  visualization_tools.py
