[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ke"
version = "0.1.0"
description = "MCP server that serves cosmology analysis tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
    "smolagents",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy",
    "pandas",
    "classy>=3.0.0",
    "arxiv>=2.0.0",
    "requests>=2.28.0",
    "pypdf>=3.0.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-ke = "mcp_server:main"

[tool.setuptools]
packages = ["mcp_utils", "codes", "tools", "agent_tools"]
py-modules = ["mcp_server"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
